<resources>
    <string name="app_name">MeetMe</string>
    <string name="wants_to_chat">WANTS TO CHAT</string>
    <string name="locals">Locals</string>
    <string name="live">Live</string>
    <string name="chat">Chat</string>
    <string name="match">Match</string>
    <string name="me">Me</string>
    <string name="boost">Boost!</string>
    <string name="_100">100</string>
    <string name="anuradha">Anuradha</string>
    <string name="lana">Lana</string>
    <string name="emma">Emma</string>
    <string name="nisha">Nisha</string>
    <string name="sophia">Sophia</string>
    <string name="reset">RESET</string>
    <string name="location">Location</string>
    <string name="basic">Basic</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="orientation">Orientation</string>
    <string name="covid_dating_preference">Covid Dating Preference</string>
    <string name="show_online_members_only">Show online members only</string>
    <string name="smoking">Smoking</string>
    <string name="trending_live">TRENDING</string>
    <string name="nearby_live">NEARBY</string>
    <string name="date_live">DATE</string>
    <string name="new_live">NEW</string>
    <string name="favourites_live">FAVOURITES</string>
    <string name="leaderboads_live">LEADERBOADS</string>
    <string name="advanced_localFilter">Advanced</string>
    <string name="filters_localFilters">Filters</string>
    <string name="just_think_that_whatever_you_are_thinking_is_written_here">JUST THINK THAT WHATEVER YOU ARE THINKING IS WRITTEN HERE</string>
    <string name="derek_46_live_name">Derek | 46</string>
    <string name="miss_marry_live_name">Miss Marry</string>
    <string name="waiting_live_name">Waiting</string>
    <string name="sitting_live_name">SITTING</string>
    <string name="enjoying_live_name">Enjoying</string>
    <string name="watching_live_name">Watching</string>
    <string name="my_neck_live_name">My Neck</string>
    <string name="my_suit_live_name">My Suit</string>
    <string name="moon_live_name">Moon</string>
    <string name="smiley_live_name">Smiley</string>
    <string name="my_chats_chat">MY CHATS</string>
    <string name="find_a_chat_partner">Find a chat partner</string>
    <string name="live_trending"><![CDATA[LIVE & TRENDING]]></string>
    <string name="play_match">PLAY</string>
    <string name="admirers_match">ADMIRERS</string>
    <string name="matches_match">MATCHES</string>
    <string name="time_to_fine_more">Time to fine more!</string>
    <string name="start_matching">Start Matching</string>
    <string name="why_not_secretly_admire_someone">Why not secretly admire someone?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="anyone_can_join_free">Anyone can join FREE!</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="log_in">Log In</string>
    <string name="meet_new_people">Meet New People!</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="william_james_25">William James, 25</string>
    <string name="australia">Australia</string>
    <string name="india">India</string>
    <string name="verify_now">VERIFY NOW</string>
    <string name="meetme">MeetMe+</string>
    <string name="notifications">Notifications</string>
    <string name="views">Views</string>
    <string name="favourites">Favourites</string>
    <string name="friends">Friends</string>
    <string name="level">Level</string>
    <string name="credits">Credits</string>
    <string name="diamonds">Diamonds</string>
    <string name="upgrade">Upgrade</string>
    <string name="name_signUp">NAME</string>
    <string name="email_signUp">EMAIL</string>
    <string name="password_signUp">PASSWORD</string>
    <string name="birthday_signUp">BIRTHDAY</string>
    <string name="gender_signUp">GENDER</string>
    <string name="location_signUp">LOCATION</string>
    <string name="sign_up_free">Sign Up Free!</string>
    <string name="notify">This is where we will notify you</string>
    <string name="stuff">when stuff happens</string>
    <string name="new_people">Meet new people</string>
    <string name="see_live">See who is live</string>

</resources>