<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admire_Match">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvTop_match"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">

            <TextView
                android:id="@+id/tvPlay_match"
                style="@style/matchActivity_top_layout"
                android:text="@string/play_match"
                android:textColor="@color/custom_grey" />

            <TextView
                android:id="@+id/tvAdmire_match"
                style="@style/matchActivity_top_layout"
                android:text="@string/admirers_match"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvMatches_match"
                style="@style/matchActivity_top_layout"
                android:text="@string/matches_match"
                android:textColor="@color/custom_grey" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:weightSum="5">

            <TextView
                android:id="@+id/tvLocals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/dp_3"
                android:gravity="center"
                android:text="@string/locals"
                app:drawableTopCompat="@drawable/ic_locals" />

            <TextView
                android:id="@+id/tvLive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/dp_3"
                android:gravity="center"
                android:text="@string/live"
                app:drawableTopCompat="@drawable/ic_live" />

            <TextView
                android:id="@+id/tvChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/dp_3"
                android:gravity="center"
                android:text="@string/chat"
                app:drawableTopCompat="@drawable/ic_chat" />

            <TextView
                android:id="@+id/tvMatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/dp_3"
                android:gravity="center"
                android:text="@string/match"
                android:textColor="@color/custom_faded_purple"
                app:drawableTopCompat="@drawable/ic_match_mark" />

            <TextView
                android:id="@+id/tvMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/dp_3"
                android:gravity="center"
                android:text="@string/me"
                app:drawableTopCompat="@drawable/ic_me" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/cvBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvTop_match"
        app:srcCompat="@drawable/ic_target" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:text="You've run out of admirers!"
        android:textColor="@color/custom_grey"
        android:textSize="@dimen/sp_17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_to_fine_more"
        android:textColor="@color/custom_grey"
        android:textSize="@dimen/sp_17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/coin_green"
        app:cardCornerRadius="@dimen/dp_5"
        app:layout_constraintBottom_toTopOf="@+id/cvBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <Button
            android:id="@+id/btnStartMatching"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/material_on_background_disabled"
            android:padding="@dimen/dp_15"
            android:text="@string/start_matching"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>