<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MeActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:weightSum="5">

            <TextView
                android:id="@+id/tvLocals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/dp_3"
                android:gravity="center"
                android:text="@string/locals"
                app:drawableTopCompat="@drawable/ic_locals" />

            <TextView
                android:id="@+id/tvLive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/dp_3"
                android:gravity="center"
                android:text="@string/live"
                app:drawableTopCompat="@drawable/ic_live" />

            <TextView
                android:id="@+id/tvChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/dp_3"
                android:gravity="center"
                android:text="@string/chat"
                app:drawableTopCompat="@drawable/ic_chat" />

            <TextView
                android:id="@+id/tvMatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/dp_3"
                android:gravity="center"
                android:text="@string/match"
                app:drawableTopCompat="@drawable/ic_match" />

            <TextView
                android:id="@+id/tvMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/dp_3"
                android:gravity="center"
                android:text="@string/me"
                android:textColor="@color/custom_faded_purple"
                app:drawableTopCompat="@drawable/ic_me_mark" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_90">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageView"
                android:layout_width="@dimen/dp_120"
                android:layout_height="@dimen/dp_120"
                android:layout_marginTop="@dimen/dp_30"
                android:src="@drawable/one_live"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/william_james_25"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

            <TextView
                android:id="@+id/tvCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/india"
                android:textColor="@color/reddish_grey"
                android:textSize="@dimen/sp_17"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvName" />

            <TextView
                android:id="@+id/tvVerifyNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/verify_rectangle_bg"
                android:paddingStart="@dimen/dp_10"
                android:paddingTop="@dimen/dp_5"
                android:paddingEnd="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_5"
                android:text="@string/verify_now"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCountry" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvAddPhoto"
                android:layout_width="@dimen/dp_90"
                android:layout_height="@dimen/dp_90"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_30"
                app:cardBackgroundColor="@color/custom_sky_blue"
                app:cardCornerRadius="@dimen/dp_5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvVerifyNow">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_15"
                    android:text="Add photo"
                    android:textColor="@color/white" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:src="@drawable/ic_camera" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/ccvPicture"
                android:layout_width="@dimen/dp_90"
                android:layout_height="@dimen/dp_90"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_30"
                app:cardCornerRadius="@dimen/dp_5"
                app:layout_constraintStart_toEndOf="@id/cvAddPhoto"
                app:layout_constraintTop_toBottomOf="@id/tvVerifyNow">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/one_live" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvMeetMe"
                style="@style/meActivity_style"
                android:drawableStart="@drawable/ic_system_update"
                android:text="@string/meetme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ccvPicture" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_15"
                android:background="@drawable/rectangle_boost_bg"
                android:paddingStart="@dimen/dp_10"
                android:paddingTop="@dimen/dp_3"
                android:paddingEnd="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_3"
                android:text="@string/upgrade"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_17"
                app:layout_constraintTop_toBottomOf="@id/ccvPicture"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvNotification" />

            <TextView
                android:id="@+id/tvNotification"
                style="@style/meActivity_style"
                android:drawableStart="@drawable/ic_notification"
                android:text="@string/notifications"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMeetMe" />

            <TextView
                android:id="@+id/tvViews"
                style="@style/meActivity_style"
                android:drawableStart="@drawable/ic_views"
                android:text="@string/views"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNotification" />

            <TextView
                android:id="@+id/tvFavourites"
                style="@style/meActivity_style"
                android:drawableStart="@drawable/ic_star"
                android:text="@string/favourites"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvViews" />

            <TextView
                android:id="@+id/tvFriends"
                style="@style/meActivity_style"
                android:drawableStart="@drawable/ic_friends"
                android:text="@string/friends"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvFavourites" />

            <TextView
                android:id="@+id/tvLevel"
                style="@style/meActivity_style"
                android:drawableStart="@drawable/ic_xp"
                android:text="@string/level"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvFriends" />

            <TextView
                android:id="@+id/tvCredits"
                style="@style/meActivity_style"
                android:drawableStart="@drawable/ic_coin_stack"
                android:text="@string/credits"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLevel" />

            <TextView
                android:id="@+id/tvDiamonds"
                style="@style/meActivity_style"
                android:drawableStart="@drawable/ic_diamond"
                android:text="@string/diamonds"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCredits" />

            <TextView
                android:id="@+id/tvSettings"
                style="@style/meActivity_style"
                android:drawableStart="@drawable/ic_settings"
                android:text="Settings"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDiamonds" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>